# squidgets

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pluginMain.cpp
src/: pipeline.md
src/abstract_squidget/: types.hpp
src/abstract_squidget/apps/: abstractContext.cpp  abstractContext.hpp  abstractContextCmd.cpp  abstractContextCmd.hpp  abstractSquidgetTool.cpp  abstractSquidgetTool.hpp
src/abstract_squidget/deformer/: abstractDeformer.cpp  abstractDeformer.hpp  deformerCurves.cpp  deformerCurves.hpp  errorCalculation.cpp  errorCalculation.hpp  optimization.cpp  optimization.hpp  renderMatrices.cpp  renderMatrices.hpp
src/abstract_squidget/deformer/method/: deform.cpp  deform.hpp
src/bookmark_squidget/apps/: bookmarkContext.cpp  bookmarkContext.hpp  bookmarkContextCmd.cpp  bookmarkContextCmd.hpp  bookmarkSquidgetTool.cpp  bookmarkSquidgetTool.hpp  curveHUD.cpp  curveHUD.hpp
src/bookmark_squidget/apps/interaction/: controlInteraction.cpp  controlInteraction.hpp  createInteraction.cpp  createInteraction.hpp  interaction.hpp
src/bookmark_squidget/canvas/: attributeConfigManager.cpp  attributeConfigManager.hpp  mayaAttributeEditor.cpp  mayaAttributeEditor.hpp  squidget.cpp  squidget.hpp  squidgetCanvas.cpp  squidgetCanvas.hpp  squidgetToolManager.cpp  squidgetToolManager.hpp
src/bookmark_squidget/canvas/interface/: element.cpp  element.hpp  elementContainer.cpp  elementContainer.hpp
src/common/algo/: CMakeLists.txt  registration.cpp  registration.hpp  visualization.cpp  visualization.hpp
src/common/logging/: logger.cpp  logger.hpp
src/common/maya/: factory.cpp  factory.hpp  toonRenderer.cpp  toonRenderer.hpp
src/common/util/: definitions.hpp  math.cpp  math.hpp  maya.cpp  maya.hpp
